WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273306
[macOS] REGRESSION(
275831@main
): Netflix can error out while scrubbing
https://bugs.webkit.org/show_bug.cgi?id=273306
Summary
[macOS] REGRESSION(275831@main): Netflix can error out while scrubbing
Jer Noble
Reported
2024-04-26 00:24:28 PDT
[macOS] REGRESSION(
275831@main
): Netflix can error out while scrubbing
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2024-04-26 00:24:32 PDT
<
rdar://problem/126654352
>
Jer Noble
Comment 2
2024-04-26 00:28:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27791
EWS
Comment 3
2024-04-26 15:02:31 PDT
Committed
278060@main
(c7be93fa40d3): <
https://commits.webkit.org/278060@main
> Reviewed commits have been landed. Closing PR #27791 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug