[macOS] REGRESSION(275831@main): Netflix can error out while scrubbing https://bugs.webkit.org/show_bug.cgi?id=273306 rdar://126654352

Reviewed by Eric Carlson.

A race condition can occur where the MediaSource object in the WebContent process
does not check the buffered ranges for the new currentTime after a seek, which leads
to the readyState remaining at HAVE_METADATA, and the seeked event failing to fire.

Ensure that the MediaSource checks its buffered ranges after a seek by adding an
explicit "seeked()" method to MediaSourcePrivateClient to be used when a seek completes
in a MediaPlayerPrivate, to notify the MediaSource to revalidate its buffered ranges.

To avaid adding a new race condition, call this new "seeked()" method from
MediaPlayerPrivateRemote, rather than from MediaSourcePrivateRemote, to ensure that
the "official" time is fully updated before the MediaSource monitiors its source buffers.

* Source/WebCore/Modules/mediasource/MediaSource.cpp:
(WebCore::MediaSource::failedToCreateRenderer):
(WebCore::MediaSource::seeked):
* Source/WebCore/Modules/mediasource/MediaSource.h:
* Source/WebCore/platform/graphics/MediaSourcePrivate.cpp:
(WebCore::MediaSourcePrivate::seeked):
* Source/WebCore/platform/graphics/MediaSourcePrivate.h:
* Source/WebCore/platform/graphics/MediaSourcePrivateClient.h:
* Source/WebCore/platform/graphics/avfoundation/objc/MediaSourcePrivateAVFObjC.h:
* Source/WebCore/platform/graphics/avfoundation/objc/MediaSourcePrivateAVFObjC.mm:
(WebCore::MediaSourcePrivateAVFObjC::seeked):
* Source/WebKit/GPUProcess/media/RemoteMediaSourceProxy.h:
* Source/WebKit/WebProcess/GPU/media/MediaPlayerPrivateRemote.cpp:
(WebKit::MediaPlayerPrivateRemote::seeked):

Canonical link: https://commits.webkit.org/278060@main