Source/WebCore/Modules/mediasource/MediaSource.h
@@ -198,6 +198,7 @@ private:
     Ref<MediaPromise> seekToTime(const MediaTime&);
     using RendererType = MediaSourcePrivateClient::RendererType;
     void failedToCreateRenderer(RendererType);
+    void seeked(const MediaTime&);
 
     void refEventTarget() final { ref(); }
     void derefEventTarget() final { deref(); }
