Source/WebCore/platform/graphics/avfoundation/objc/MediaSourcePrivateAVFObjC.h
@@ -78,6 +78,7 @@ public:
     bool hasSelectedVideo() const;
 
     void willSeek();
+    void seeked(const MediaTime&);
 
     FloatSize naturalSize() const;
 
